<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:quesity="http://schemas.android.com/apk/res/com.quesity"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/semi_transparent_white"
    android:padding="20dp">
   
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
    >
          <EditText 
          	android:id="@+id/txt_email_field"
          	android:layout_height="wrap_content"
          	android:layout_width="@dimen/login_txt_field_width"
          	android:inputType="textEmailAddress"
          	android:hint="@string/lbl_email_login"
          	android:layout_marginBottom="@dimen/login_txt_field_margin_bottom"
          />
          
          <EditText 
          	android:id="@+id/txt_firstname_field"
          	android:layout_height="wrap_content"
          	android:layout_width="@dimen/login_txt_field_width"
          	android:inputType="textPersonName"
          	android:layout_below="@id/txt_email_field"
          	android:hint="@string/lbl_firstname_login"
          	android:layout_marginBottom="@dimen/login_txt_field_margin_bottom"
          	
          />
          
          <EditText 
          	android:id="@+id/txt_lastname_field"
          	android:layout_height="wrap_content"
          	android:layout_width="@dimen/login_txt_field_width"
          	android:inputType="textPersonName"
          	android:layout_below="@id/txt_firstname_field"
          	android:hint="@string/lbl_lastname_login"
          	android:layout_marginBottom="@dimen/login_txt_field_margin_bottom"
          	
          />
          
          <EditText 
          	android:id="@+id/txt_password_field"
          	android:layout_height="wrap_content"
          	android:layout_width="@dimen/login_txt_field_width"
          	android:inputType="textPassword"
          	android:layout_below="@id/txt_lastname_field"
          	android:hint="@string/lbl_password_login"
          	android:layout_marginBottom="@dimen/login_txt_field_margin_bottom"
          />
          <com.quesity.fragments.QuesityButtonView 
              android:id="@+id/register_yes_btn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              quesity:button_padding="5dp"
              quesity:button_icon="@drawable/yes_icon"
              android:layout_below="@id/txt_password_field"
              android:layout_alignRight="@id/txt_password_field"
           />
          
          <com.quesity.fragments.QuesityButtonView 
              android:id="@+id/register_no_btn"
              android:background="@drawable/register_button_selector"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              quesity:button_padding="5dp"
              quesity:button_icon="@drawable/no_icon"
              android:layout_below="@id/txt_password_field"
              android:layout_alignLeft="@id/txt_password_field"
           />
              
        </RelativeLayout>


</RelativeLayout>
