<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:quesity="http://schemas.android.com/apk/res/com.quesity.app"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:weightSum="100"
>

    <FrameLayout 
        android:id="@+id/main_screen_clouds"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="@drawable/clouds_dont_stretch"
    ></FrameLayout>

    <ImageView
        android:id="@+id/main_screen_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="26"
        android:src="@drawable/logo"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:adjustViewBounds="true"
        
     />
   
   <LinearLayout
    android:id="@+id/buttons_container"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:layout_weight="49" 
    android:weightSum="100"
   >
	<com.quesity.fragments.QuesityButtonView 
	android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_marginBottom="20dp"
    android:id="@+id/btn_find_quest"
	android:name="com.quesity.fragments.ButtonFragment"	
	quesity:button_text="@string/lbl_find_quest"
	quesity:button_icon="@drawable/search"
	android:layout_weight="33"
    />
        
    <com.quesity.fragments.QuesityButtonView 
    android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_marginBottom="20dp"
    android:id="@+id/btn_my_quests"
	android:name="com.quesity.fragments.ButtonFragment"	
	quesity:button_text="@string/lbl_my_quests"
	quesity:button_icon="@drawable/favorites"
	android:layout_weight="33"
    />
    <com.quesity.fragments.QuesityButtonView 
  	android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:id="@+id/btn_about"
	android:name="com.quesity.fragments.ButtonFragment"	
	quesity:button_text="@string/lbl_about"
	quesity:button_icon="@drawable/about"
	android:layout_weight="33"
    />
   </LinearLayout>


    
</LinearLayout>